Use the same metric recorder for PasswordFormManager and NewPasswordFormManager.

When flag #new-password-form-parsing is on, PasswordFormManager is used for
saving and NewPasswordFormManager for filling. Now they have separate metric
recorders. Metric PasswordManager.ActionsTakenV3 (and others) is inconsistent
because filling and saving parts of this metric written with different recorders.

This CL implements usage of the same metric recorder for PasswordFormManager
and NewPasswordFormManager that corresponds for the same form.

Bug: 882432, 831123

Change-Id: I84b480c86ec8172fb9d055cd8189529c5e4f42fb
Reviewed-on: https://chromium-review.googlesource.com/1215965
Commit-Queue: Vadym Doroshenko <dvadym@chromium.org>
Reviewed-by: Dominic Battré <battre@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590234}
Former-commit-id: a76e906b901ad098d95dddac0c77d57af5983eb9